import java.util.*;

public class ReferralPathFinder {
    public ReferralPathFinder(StudentGraph graph) {
        // Constructor
    }

    public List<UniversityStudent> findReferralPath(UniversityStudent start, String targetCompany) {
        // Method signature only
        return new ArrayList<>();
    }
}
