/**
 * ChatThread is a public class that implements the interface runnable.
 * The class is used to handle chats between two different students.
 *
 */

public class ChatThread implements Runnable {
    /**
     *
     * @param sender is the student sending the message
     * @param receiver is the student receiving the message sent by the sender.
     * @param message is the contents of the message that sender wants to send to reciever.
     * The method will handle the sending and recieving of messages using threads.
     */
    public ChatThread(UniversityStudent sender, UniversityStudent receiver, String message) {
        // Constructor
    }


    @Override
    public void run() {
        // Method signature only
    }
}
