/**
 * FriendRequestThread is a public class that implements the interface Runnable.
 * The class is used to handle friend requests between a sender and a receiver.
 * The class uses threads to handle multiple incoming friend requests.
 */

public class FriendRequestThread implements Runnable {
    /**
     *
     * @param sender is the student sending the friend request.
     * @param receiver is the student receiving the friend request.
     */
    public FriendRequestThread(UniversityStudent sender, UniversityStudent receiver) {
        // Constructor
    }


    @Override
    public void run() {
        // Method signature only
    }
}
