import java.util.*;

/**
 * GaleShapley is a public class that is used to setup and run the Gale-Shapely algorithm.
 * The algorithm is used to pair university students as roommates so that each student gets their ideal roommate.
 * assignRoommates is the method that will handle the matching.
 * The method will take a List of students as the input.
 * Each UniversityStudent type has a list of preferences which will be to run Gale-Shapely and create the stable matching pairs.
 */

public class GaleShapley {
    /**
     *
     * @param students is a list of type UniversityStudents which includes each student's preference list.
     *        We can use this preference list to run Gale-Shapely and find each student's stable roommate matching.
     * The method will find the stable matchings for each student using the Gale-Shapely Algorithm.
     */
    public static void assignRoommates(List<UniversityStudent> students) {
    }
}
