import java.util.*;

/**
 * PodFormation is the class that contains the methods used to create the pods based on each student's pod attributes
 * The pods will be formed by using Prim's algorith to create a pods with minimized total connection weight.
 */

public class PodFormation<StudentGraph> {
    /**
     *
     * @param graph is the graph that we will run Prim's algorithm on to find the minimum spanning tree with minimized total weight connection.
     *
     */
    public PodFormation(StudentGraph graph) {
        // Constructor
    }

    /**
     *
     * @param podSize is the input of how many students will be in the pod.
     *        We will use this information to form the pods.
     *        The method will create a minimum spanning tree with minimized total connection weight.
     */
    public void formPods(int podSize) {
        // Method signature only
    }
}
